--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "webpack-ts",
-  "version": "1.0.0",
-  "description": "",
+  "name": "gh-qqnews-utils",
+  "version": "0.0.1",
+  "description": "前端中常用的工具方法",
   "main": "dist",
   "scripts": {
     "test": "jest",
     "build": "npm run test && webpack -p --config webpack.config.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "skeetershi",
+  "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@types/jest": "^25.2.3",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
     "babel-jest": "^26.0.1",
     "eslint": "^7.1.0",
+    "husky": "^4.2.5",
     "jest": "^26.0.1",
     "ts-jest": "^26.0.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
