--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist",
   "scripts": {
     "test": "jest",
+    "doc": "./node_modules/typedoc/bin/typedoc --out ./docs ./src",
     "build": "npm run test && webpack -p --config webpack.config.js"
   },
   "author": "skeetershi",
@@ -21,6 +22,7 @@
     "jest": "^26.0.1",
     "ts-jest": "^26.0.0",
     "ts-loader": "^7.0.5",
+    "typedoc": "^0.17.7",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
