--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.1",
   "description": "前端中常用的工具方法",
   "main": "dist",
+  "files": [
+    "dist",
+    "docs"
+  ],
   "scripts": {
     "test": "jest",
     "doc": "./node_modules/typedoc/bin/typedoc --out ./docs ./src",
     "build": "npm run test && webpack -p --config webpack.config.js"
   },
+  "repository": "https://git.code.oa.com/news-gh-team/gh-qqnews-utils",
   "author": "skeetershi",
   "license": "MIT",
   "devDependencies": {
