fix(dist): build files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,22 @@ node_modules/
 dist/
 coverage/
 .DS_Store
+cookie.d.ts
+cookie.js
+date.d.ts
+date.js
+debounce-throttle.d.ts
+debounce-throttle.js
+index.d.ts
+querystring.d.ts
+querystring.js
+regexp.d.ts
+regexp.js
+string.d.ts
+string.js
+ua.d.ts
+ua.js
+url.d.ts
+url.js
+visibility.d.ts
+visibility.js
