--- a/package.json
+++ b/package.json
@@ -1,12 +1,41 @@
 {
   "name": "gh-qqnews-utils",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "前端中常用的工具方法",
-  "main": "dist",
+  "keywords": [
+    "utils",
+    "工具",
+    "cookie",
+    "date",
+    "debounce",
+    "querystring",
+    "regexp",
+    "string",
+    "ua",
+    "url",
+    "visibility"
+  ],
+  "main": "index.js",
   "files": [
-    "dist",
-    "docs",
-    "__tests__"
+    "cookie.d.ts",
+    "cookie.js",
+    "date.d.ts",
+    "date.js",
+    "debounce-throttle.d.ts",
+    "debounce-throttle.js",
+    "index.d.ts",
+    "querystring.d.ts",
+    "querystring.js",
+    "regexp.d.ts",
+    "regexp.js",
+    "string.d.ts",
+    "string.js",
+    "ua.d.ts",
+    "ua.js",
+    "url.d.ts",
+    "url.js",
+    "visibility.d.ts",
+    "visibility.js"
   ],
   "scripts": {
     "test": "jest",
