--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "baseUrl": ".",
-        "outDir": "./dist",
+        "outDir": "./",
         //   "types": [
         //     "webpack-env",
         //     "jest"
