--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   "scripts": {
     "test": "jest",
     "doc": "./node_modules/typedoc/bin/typedoc --out ./docs ./src",
-    "build": "npm run test && webpack -p --config webpack.config.js"
+    "build": "npm run test && webpack -p --config webpack.config.js",
+    "publish": "npm publish && node script/clear-build.js"
   },
   "repository": "https://git.code.oa.com/news-gh-team/gh-qqnews-utils",
   "author": "skeetershi",
