--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gh-qqnews-utils",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "前端中常用的工具方法",
   "keywords": [
     "utils",
@@ -15,7 +15,7 @@
     "url",
     "visibility"
   ],
-  "main": "index.js",
+  "main": "utils.js",
   "files": [
     "cookie.d.ts",
     "cookie.js",
@@ -23,7 +23,8 @@
     "date.js",
     "debounce-throttle.d.ts",
     "debounce-throttle.js",
-    "index.d.ts",
+    "utils.d.ts",
+    "utils.js",
     "querystring.d.ts",
     "querystring.js",
     "regexp.d.ts",
