docs(readme): update readme

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "cookie.js",
     "date.d.ts",
     "date.js",
-    "debounce-throttle.d.ts",
-    "debounce-throttle.js",
+    "debounceThrottle.d.ts",
+    "debounceThrottle.js",
     "utils.d.ts",
     "utils.js",
     "querystring.d.ts",
