--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ cookie.d.ts
 cookie.js
 date.d.ts
 date.js
-debounce-throttle.d.ts
-debounce-throttle.js
+debounceThrottle.d.ts
+debounceThrottle.js
 utils.d.ts
 utils.js
 querystring.d.ts
