--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "jest",
     "doc": "./node_modules/typedoc/bin/typedoc --out ./docs ./src",
     "build": "npm run test && webpack -p --config webpack.config.js",
-    "publish": "npm publish && node script/clear-build.js"
+    "clean": "node script/clear-build.js"
   },
   "repository": "https://git.code.oa.com/news-gh-team/gh-qqnews-utils",
   "author": "skeetershi",
