--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
         "eslint": "^7.1.0",
         "husky": "^4.2.5",
         "jest": "^26.0.1",
+        "lint-staged": "^10.2.11",
+        "prettier": "^2.0.5",
         "ts-jest": "^26.0.0",
         "ts-loader": "^7.0.5",
         "typedoc": "^0.17.7",
@@ -66,7 +68,13 @@
     },
     "husky": {
         "hooks": {
+            "pre-commit": "lint-staged",
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
+    },
+    "lint-staged": {
+        "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+            "prettier --write"
+        ]
     }
 }
