--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@typescript-eslint/eslint-plugin": "^3.0.0",
         "@typescript-eslint/parser": "^3.0.0",
         "babel-jest": "^26.0.1",
+        "dot-prop": "^6.0.1",
         "eslint": "^7.1.0",
         "husky": "^4.2.5",
         "jest": "^26.0.1",
