chore(webpack): 修改webpack配置,添加修改时间

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ debounceThrottle.d.ts
 debounceThrottle.js
 utils.d.ts
 utils.js
+number.d.ts
+number.js
 querystring.d.ts
 querystring.js
 random.d.ts
