--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "debounceThrottle.js",
         "utils.d.ts",
         "utils.js",
+        "number.d.ts",
+        "number.js",
         "querystring.d.ts",
         "querystring.js",
         "random.d.ts",
